--- a/MedAlert/src/App.css
+++ b/MedAlert/src/App.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+.container {
+    padding: 20px;
+  }
+  input {
+    margin: 5px;
+  }
+  button {
+    margin: 5px;
+  }
